# solusync-x

./: .gitignore  README.md  test-demo.html  test-ws.sh
client-web/: package-lock.json  package.json  tsconfig.json
client-web/examples/: demo.html
client-web/src/: clock.ts  index.ts  player.ts  solusync.ts  types.ts
docs/: SPEC_v0.1.md
server/: Cargo.toml
server/public/: index.html  monitor.html
server/src/: main.rs
server/src/clock/: filter.rs  mod.rs  sync.rs
server/src/control/: handlers.rs  mod.rs
server/src/media/: buffer.rs  mod.rs  webrtc_server.rs
server/src/protocol/: messages.rs  mod.rs
