[package]
name = "solusync-x-server"
version = "0.1.0"
edition = "2021"
authors = ["SOLUNAR Team"]
description = "SOLUSync-X: Next-generation synchronization protocol for live events"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebRTC
webrtc = "0.9"

# QUIC
quinn = "0.10"
rustls = { version = "0.21", default-features = false, features = ["quic"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time & sync
chrono = "0.4"
parking_lot = "0.12"

# Logging & monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
once_cell = "1.19"
futures = "0.3"

# Math & filters
nalgebra = "0.32"  # For Kalman filter

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
fake = "2.9"

[[bench]]
name = "clock_sync"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1